# AnaFis-PyQt

./: .gitignore  README.md  activate.bat  activate.sh  pyproject.toml  requirements.txt
anafis/: __init__.py  app.py
anafis/core/: config.py  data_structures.py  fitting_logic.py  logging_config.py  protocols.py
anafis/core/data/: io.py
anafis/core/uncertanty/: formula_generator.py  uncertainties.py
anafis/gui/: gui.py
anafis/gui/dialogs/: config_dialog.py  uncertainty_calculator_dialog.py
anafis/gui/shared/: base_tab.py  data_bus.py  data_transforms.py  import_dialog.py
anafis/gui/shell/: detachable_tab.py  home_menu.py  notebook.py
anafis/gui/shell/drag_and_drop/: drag_preview_widget.py  drag_state.py  drop_indicator.py  global_drag_manager.py  window_hierarchy.py
anafis/gui/tabs/: fitting_tab.py  montecarlo_tab.py  solver_tab.py  spreadsheet_tab.py
docs/: README.md
plans/: Planv2.md  code-guideline.md  design.md  plan-for-tabs.md  requirements.md  tasks.md
scripts/: README.md  activate_dev.bat  activate_dev.sh  run_anafis.py  setup_dev.py  setup_venv.py  test.py  test_installation.py
tests/: __init__.py  conftest.py  test_data_bus.py  test_example.py
tests/core/: test_config.py  test_data_structures.py  test_logging_config.py
