[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anafis"
version = "0.1.0"
description = "Advanced Numerical Analysis and Fitting Interface System"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "CokieMiner"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
    # GUI Framework
    "PyQt6>=6.8.0",

    # Core Scientific Computing
    "numpy>=2.1.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",

    # Symbolic Mathematics
    "sympy>=1.13.0",

    # Curve Fitting and Statistics
    "lmfit>=1.3.0",
    "emcee>=3.1.6",

    # Units and Physical Quantities
    "pint>=0.24.0",

    # Data Storage
    "h5py>=3.12.0",

    # Additional Scientific Libraries
    "matplotlib>=3.9.0",
    "vispy>=0.15.0",
    "numexpr>=2.10.0",
    "networkx>=3.4.0",

    # LaTeX Support
    "latex2sympy2>=1.9.1",

    # Internationalization
    "babel>=2.16.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-qt>=4.4.0",
    "pytest-cov>=6.0.0",
    "black>=24.10.0",
    "flake8>=7.1.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]
gpu = [
    "cupy>=13.3.0",  # CUDA support
    "numba>=0.60.0",  # JIT compilation
]
packaging = [
    "pyinstaller>=6.11.0",
    "nsis>=3.10.0",  # Windows installer
]

[project.urls]
Homepage = "https://github.com/anafis/anafis"
Documentation = "https://anafis.readthedocs.io"
Repository = "https://github.com/anafis/anafis.git"
"Bug Tracker" = "https://github.com/anafis/anafis/issues"

[project.scripts]
anafis = "anafis.app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["anafis*"]

[tool.setuptools.package-data]
anafis = [
    "resources/*",
    "i18n/*.qm",
    "i18n/*.ts",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=anafis",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "gui: marks tests as GUI tests requiring display",
]

[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "PyQt6.*",
    "matplotlib.*",
    "vispy.*",
    "emcee.*",
    "lmfit.*",
    "latex2sympy2.*",
    "sympy.*",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".venv",
    ".tox",
]